--- a/stackOverflow2020.ipynb
+++ b/stackOverflow2020.ipynb
@@ -21,6 +21,7 @@
    "id": "b2ca476c",
    "metadata": {},
    "source": [
+    "#### Business Understanding\n",
     "#### Three real-world questions of the following data\n",
     "1, Do people who start coding early have a higher pay in their career?<br>\n",
     "2, Do people who start coding early will tend to be a professional developer?<br>\n",
@@ -48,6 +49,14 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0511f84",
+   "metadata": {},
+   "source": [
+    "#### Data Understanding"
    ]
   },
   {
@@ -373,6 +382,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de911adf",
+   "metadata": {},
+   "source": [
+    "#### Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "39c2f7e5",
@@ -460,7 +477,7 @@
    ],
    "source": [
     "# Clean the data\n",
-    "# Drop any missing values\n",
+    "# Drop any missing values because if we cannot calculate mean salary you one person based on other people's salary\n",
     "df_1.dropna(subset=['ConvertedComp'], axis=0, inplace=True)\n",
     "df_1.head()"
    ]
@@ -565,9 +582,18 @@
    ],
    "source": [
     "# replace missing values in Age1stCode column with the column mean value\n",
+    "# People all code in different ages, so we can take mean value\n",
     "df_1['Age1stCode'].fillna(np.mean(df_1['Age1stCode']), inplace=True)\n",
     "df_1.isnull().sum()\n",
     "df_1.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58ea8a03",
+   "metadata": {},
+   "source": [
+    "#### Data Modeling and Visualization"
    ]
   },
   {
@@ -643,6 +669,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc89366e",
+   "metadata": {},
+   "source": [
+    "#### Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "467a4537",
@@ -691,6 +725,8 @@
    "source": [
     "# Clean the data \n",
     "# Drop any missing values in MainBranch column and replace some object in Age1stCode column\n",
+    "# Drop missing values because we cannot just randomly put in people's profession in this column\n",
+    "# in this case, it's different from numerical columns\n",
     "df_2.dropna(subset=['MainBranch'], axis=0, inplace=True)\n",
     "df_2['Age1stCode'].replace(to_replace='Younger than 5 years', value='4', inplace=True)\n",
     "# convert data type and fill in any NaN \n",
@@ -805,6 +841,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ba7362e",
+   "metadata": {},
+   "source": [
+    "#### Data modeling and visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "f52e17fc",
@@ -909,6 +953,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58bece89",
+   "metadata": {},
+   "source": [
+    "#### Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "03cedc8f",
@@ -944,6 +996,7 @@
    "source": [
     "# Clean the data\n",
     "# drop any NaN in ConvertedComp column\n",
+    "# Drop any missing values because if we cannot calculate mean salary you one person based on other people's salary\n",
     "df_3.dropna(subset=['ConvertedComp'], axis=0, inplace=True)\n",
     "df_3.info()"
    ]
@@ -1110,14 +1163,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fe9067f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "id": "f2e26e5a",
    "metadata": {},
@@ -1163,6 +1208,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "681a2b9f",
+   "metadata": {},
+   "source": [
+    "#### Data Modeling and Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "76b5d30b",
@@ -1202,7 +1255,7 @@
    "id": "62bd8ca7",
    "metadata": {},
    "source": [
-    "### Some conclusions from the above analysis"
+    "### Some conclusions from the above analysis (Evaluate results)"
    ]
   },
   {
